--- a/Projects/React.js/reminder/src/style.scss
+++ b/Projects/React.js/reminder/src/style.scss
@@ -54,6 +54,11 @@ input:focus, button:focus {
     margin-right: 10px;
 }
 
+.error, .reminder-info {
+    font-size: 25px;
+    text-shadow: 2px 2px 5px grey;
+}
+
 .submit-button:hover {
     background-color: #3490ce;
 }
